# gnome-desktop-icons-ne

./: HISTORY.md  README.md  desktopGrid.js  desktopManager.js  extension.js  meson.build  metadata.json  notifyX11UnderWayland.js  showErrorPopup.js  ubuntu_install.sh
po/: POTFILES.in  be.po  ca.po  cs.po  da.po  de.po  ding.pot  es.po  fi.po  fr.po  fur.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  nl.po  oc.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
